--- a/.gitignore
+++ b/.gitignore
@@ -6,24 +6,54 @@ __pycache__/
 # Environment
 .env
 .env.local
+.env.production
+.env.*.local
 
 # OS
 .DS_Store
 Thumbs.db
+desktop.ini
+*.swp
+*.swo
+*~
 
 # Editor
 .vscode/
 .idea/
-*.swp
-*.swo
+*.sublime-project
+*.sublime-workspace
+.project
+.settings/
+.metadata/
 
 # Logs
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Build artifacts
+dist/
+build/
+*.tsbuildinfo
+.cache/
+.parcel-cache/
+
+# Testing
+coverage/
+.nyc_output/
 
 # Memory/Session files (from Claude Flow)
 .swarm/
 .hive-mind/
+memory/
+.sessions/
+
+# Temporary files
+tmp/
+temp/
+*.tmp
 
 # Optional: Don't commit audio/images (re-generate from scripts)
 # Uncomment these if you want to keep assets out of git
